--- a/photos.html
+++ b/photos.html
@@ -117,28 +117,35 @@
 <body>
   <div class="terminal">
     <div class="terminal-body"> 
-      <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt">I am a space cowboy turned symmetry skeptic. Currently, I am trying to assess the maximal extent of equivariant neural networks. I use mathematical techniques from topology, measure theory, and of course, representation theory, in order to elucidate the generalization limits of equivariant functions. I also dabble in conformal prediction, and in a past life I worked on computational imaging. If you are interested in collaborating on any of these topics, or think I might fit the bill on some project, feel free to reach out.<br> <br>
+      <div class="prompt">$ Eddie Berman / About / Photos <a href="about.html" style="color: #ff3333;">   (Back)</a></div>
+      <div class="prompt">
 
-        I am advised by Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. I am also a visiting scientist with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
-
- Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts! Here is <a href="utils.html" style="color: #ff3333;">some more</a> academic material that doesn't belong anywhere else (my utils.py, if you will). Here is some (non) academic <a href="pop.html" style="color: #ff3333;">material</a>, also occupying my mind. These can serve as conversation starters or oppurtunities for snap judgements :).
-
- <br><br> Below, you can find a couple of pictures of me where I am most happy ^_^, usually when I am attending conferences with my <a href="https://ebrmn.space/peeps.html" style="color: #ff3333;">friends</a> and traversing the local neighborhood. More photos (and backstories) <a href="photos.html" style="color: #ff3333;">here</a>.</div> <br>
+ <br> A more complete list of photos :-), and with backstories</div> <br>
 
    <img src="eclipse.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
+   Watching the eclipse with Jake and Beck <br><br>
    <img src="fountain.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
+   RSS 2025 EquiSystems workshop, presenting an early version of EquiUQ. Visited George and Caltech while I was in LA!<br><br>
    <img src="IMG_6964.JPEG" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
+   COLM 2024 with Luisa, Jake, and Federico. Jake showed us around Philly :)<br><br>
    <img src="IMG_4435.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
+   SF trip after NeurIPS 2024 in Vancouver, where I stayed with John Yang and Jake and talked about Julia (the programming language). Andy showed us around SF and took us to Fort Mason. <br><br>
    <img src="silly.png" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
+   Hack MIT with Luisa, Ryan, Zack, and Jake. We made graph paper <br><br>
    <img src="cfa.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
-<img src="image.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;">
-
-<br><div class="input">Potpourri</div>
-
-<br>Ask me about: Julia (the language), Julia (from Cowboy Bebop), Space Dandy, Swapfest at the Albany Street Garage, the 1980 Miracle on Ice, Jesper Bratt, Cities and Ambition, Sonny Boy, Biking in Boston, how I fell in love with science, and journal politics from a space cowboy turned symmetry skeptic. Tell me about your favorite experience while traveling. I've had 3 concussions (and counting). One time I contributed to <a href="https://de.wikipedia.org/wiki/Michael_T%C3%BCxen" style="color: #ff3333;">this</a> wikipedia article.
-
-<br><br> Don't ask me about New Jersey.
+   Post my invited talk at the AstroAI seminar at Harvard CfA. Jake and Luisa came to support. I was fortunate enough to intern at the CfA that summer, what a magical place<br><br>
+   <img src="image.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
+   Selfie Robin took at NeurIPS 2025 in San Diego, Bo showed Purvik, Haibo, Boce, and I around UCSD and the surrounding beach while we were there. Stayed with Luisa, Jake, Beck, and Noah, and got to catch up with Andy. It was also nice seeing Marco, and meeting a lot of new friends! The GLL lab dinner was crazy good vibes too<br><br>
+   <img src="IMG_8468.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
+   NYC trip to see family, stayed with Akul for the night!<br><br>
+   <img src="IMG_4574.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
+   AAS convention in Baltimore for work with Jacqueline on correlation functions. While there I went to a Washington Capitals game during Ovi's great chase (he didn't score but they won 3-0 over Anaheim) and visited the Library of Congress for Sofi<br><br>
+   <img src="IMG_5101.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
+   Another NeurIPS 2024 picture with Jake and John Yang in Vancouver!<br><br>
+   <img src="IMG_3923.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
+   Another COLM 2024 picture, this one with David! Eating our Philly grub (except I meal prepped I have allergies)<br><br>
+   <img src="IMG_7611.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
+   Waterfall with Cory, ft. one certified beauty<br><br>
 
      </div>
       </div>
