--- a/photos.html
+++ b/photos.html
@@ -135,7 +135,7 @@
    <img src="cfa.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
    Post my invited talk at the AstroAI seminar at Harvard CfA. Jake and Luisa came to support. I was fortunate enough to intern at the CfA that summer, what a magical place<br><br>
    <img src="image.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
-   Selfie Robin took at NeurIPS 2025 in San Diego, Bo showed Purvik, Haibo, Boce, and I around UCSD and the surrounding beach while we were there. Stayed with Luisa, Jake, Beck, and Noah, and got to catch up with Andy. It was also nice seeing Marco, and meeting a lot of new friends! The GLL lab dinner was crazy good vibes too<br><br>
+   Selfie Robin took at NeurIPS 2025 in San Diego, Bo showed Purvik, Haibo, Boce, and I around UCSD and the surrounding beach while we were there. Stayed with Luisa, Jake, Beck, and Noah, and got to catch up with Andy and Caden. It was also nice seeing Marco, and meeting a lot of new friends! The GLL lab dinner was crazy good vibes too<br><br>
    <img src="IMG_8468.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
    NYC trip to see family, stayed with Akul for the night!<br><br>
    <img src="IMG_4574.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"><br>
