--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
       <div class="prompt">I am a space cowboy turned symmetry skeptic. Currently, I am trying to assess the maximal extent of equivariant neural networks. I use mathematical techniques from topology, measure theory, and of course, representation theory, in order to elucidate the generalization limits of equivariant functions. I also dabble in conformal prediction, and in a past life I worked on computational imaging. If you are interested in collaborating on any of these topics, or think I might fit the bill on some project, feel free to reach out.<br> <br>
 
-        I am advised by Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. Previously I was a visiting scientist with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
+        I am advised by Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. Previously, I was a visiting scientist with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
 
  Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts! Here is <a href="utils.html" style="color: #ff3333;">some more</a> academic material that doesn't belong anywhere else (my utils.py, if you will). Here is some (non) academic <a href="pop.html" style="color: #ff3333;">material</a>, also occupying my mind. These can serve as conversation starters or oppurtunities for snap judgements :).
 
