--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 
         I am advised by Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. Previously, I was a visiting scientist with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
 
- Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts! Here is <a href="utils.html" style="color: #ff3333;">some more</a> academic material that doesn't belong anywhere else (my utils.py, if you will). Here is some (non) academic <a href="pop.html" style="color: #ff3333;">material</a>, also occupying my mind. These can serve as conversation starters or oppurtunities for snap judgements :).
+ Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts! Here is <a href="utils.html" style="color: #ff3333;">some more</a> academic material that doesn't belong anywhere else (my utils.py, if you will). Here is some (non) academic <a href="pop.html" style="color: #ff3333;">material</a>, also occupying my mind. These can serve as conversation starters or opportunities for snap judgements :).
 
  <br><br> Below, you can find a couple of pictures of me where I am most happy ^_^, usually when I am attending conferences with my <a href="https://ebrmn.space/peeps.html" style="color: #ff3333;">friends</a> and traversing the local neighborhood. More photos (and backstories) <a href="photos.html" style="color: #ff3333;">here</a>.</div> <br>
 
