--- a/pop.html
+++ b/pop.html
@@ -155,6 +155,7 @@
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=5zG6QNaVXMY" style="color: #ff3333;" target="_blank">3Blew1Blown</a>. The only Taylor I like is the series.</div><br>
       <div class="prompt"> <a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html" style="color: #ff3333;" target="_blank">You and Your Research</a>. Bell Labs, a forgotton frontier.</div><br>
       <div class="prompt"> <a href="https://fabiensanglard.net/a_linux_evening/" style="color: #ff3333;" target="_blank">Linux Evening</a>. Been There. Done that.</div><br>
+      <div class="prompt"> <a href="http://adam.chlipala.net/advising.html" style="color: #ff3333;" target="_blank">Advising Style</a>. Coolness above comfort!</div><br>
       <div class="prompt"> <a href="https://dummit.cos.northeastern.edu/" style="color: #ff3333;" target="_blank">Evan Dummit Course Notes</a>. Welp. You've reached the end of this page. Hope it was helpful (iykyk).</div><br>
       
 
