--- a/perspective.html
+++ b/perspective.html
@@ -121,7 +121,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Publications / Berman et al. (3) <a href="publications.html" style="color: #ff3333;">   (Back)</a></div>
+ <div class="prompt">$ Eddie Berman / Publications / Julia <a href="publications.html" style="color: #ff3333;">   (Back)</a></div>
       <p><b>How does Julia compare to Python for scientific machine learning tasks? And, is Julia ready for primetime?</b>
     </div>
 <a href="ascii-art.txt"></a>
