--- a/shopt.html
+++ b/shopt.html
@@ -121,7 +121,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Publications / Berman et al. (2) <a href="publications.html" style="color: #ff3333;">   (Back)</a></div>
+ <div class="prompt">$ Eddie Berman / Publications / PSF <a href="publications.html" style="color: #ff3333;">   (Back)</a></div>
       <p><b>We propose new methods for empirical point spread function characterization and implement them in Julia. We benchmark our PSF fitter against PIFF and PSFex and show that our approach bridges the accuracy and features of PIFF with the speed of PSFex.</b>
     </div>
 <a href="ascii-art.txt"></a>
