--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,16 @@
     align-items: center;
   }
 
+  .terminal-body p {
+    border-bottom: 1px solid #ff3333;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+  }
+
+  .terminal-body p:last-of-type {
+    border-bottom: none;
+  }
+
   .dot {
     height: 15px;
     width: 15px;
