bruce there it is

--- a/pop.html
+++ b/pop.html
@@ -158,6 +158,7 @@
       <div class="prompt"> <a href="http://adam.chlipala.net/advising.html" style="color: #ff3333;" target="_blank">Advising Style</a>. Coolness above comfort!</div><br>
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=rQyEJpPSLdQ" style="color: #ff3333;" target="_blank">Bruce, There it is!</a>. Prma donna perfect!</div><br>
       <div class="prompt"> <a href="https://rintintin.colorado.edu/~vancecd/phil375/Lewis1.pdf" style="color: #ff3333;" target="_blank">Holes</a>. Black Holes and Cheese</div><br>
+      <div class="prompt"> <a href="https://seniormars.com/posts/conflicted/" style="color: #ff3333;" target="_blank">Sr. Mars is conflicted by current mathematics</a>. Some people go their whole lives without knowing about USAMO</div><br>
       <div class="prompt"> <a href="https://dummit.cos.northeastern.edu/" style="color: #ff3333;" target="_blank">Evan Dummit Course Notes</a>. Welp. You've reached the end of this page. Hope it was helpful (iykyk).</div><br>
       
 
