--- a/pop.html
+++ b/pop.html
@@ -159,7 +159,7 @@
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=rQyEJpPSLdQ" style="color: #ff3333;" target="_blank">Bruce, There it is!</a>. Prma donna perfect!</div><br>
       <div class="prompt"> <a href="https://rintintin.colorado.edu/~vancecd/phil375/Lewis1.pdf" style="color: #ff3333;" target="_blank">Holes</a>. Black Holes and Cheese</div><br>
       <div class="prompt"> <a href="https://seniormars.com/posts/conflicted/" style="color: #ff3333;" target="_blank">Sr. Mars is conflicted by current mathematics</a>. Some people go their whole lives without knowing about USAMO</div><br>
-      <div class="prompt"> <a href="https://sfeucht.github.io/rerereading/#fn:4" style="color: #ff3333;" target="_blank">Is AI Writing Still Nonsense?</a>. Beauty is in the eye of the beholder</div><br>
+      <div class="prompt"> <a href="https://sfeucht.github.io/rerereading/" style="color: #ff3333;" target="_blank">Is AI Writing Still Nonsense?</a>. Beauty is in the eye of the beholder</div><br>
       <div class="prompt"> <a href="https://webhomes.maths.ed.ac.uk/~v1ranick/papers/wigner.pdf" style="color: #ff3333;" target="_blank">The Unreasonable Effectiveness of Mathematics in the Natural Sciences</a>. Is it unreasonable though?</div><br>
       <div class="prompt"> <a href="https://dummit.cos.northeastern.edu/" style="color: #ff3333;" target="_blank">Evan Dummit Course Notes</a>. Welp. You've reached the end of this page. Hope it was helpful (iykyk).</div><br>
       
