--- a/pop.html
+++ b/pop.html
@@ -161,6 +161,7 @@
       <div class="prompt"> <a href="https://seniormars.com/posts/conflicted/" style="color: #ff3333;" target="_blank">Sr. Mars is conflicted by current mathematics</a>. Some people go their whole lives without knowing about USAMO</div><br>
       <div class="prompt"> <a href="https://sfeucht.github.io/rerereading/" style="color: #ff3333;" target="_blank">Is AI Writing Still Nonsense?</a>. Beauty is in the eye of the beholder</div><br>
       <div class="prompt"> <a href="https://webhomes.maths.ed.ac.uk/~v1ranick/papers/wigner.pdf" style="color: #ff3333;" target="_blank">The Unreasonable Effectiveness of Mathematics in the Natural Sciences</a>. Is it unreasonable though?</div><br>
+      <div class="prompt"> <a href="https://cowboybebop.fandom.com/wiki/Edward" style="color: #ff3333;" target="_blank">Edward Wong Hau Pepelu Tivruski IV</a>. Radical Edward</div><br>
       <div class="prompt"> <a href="https://dummit.cos.northeastern.edu/" style="color: #ff3333;" target="_blank">Evan Dummit Course Notes</a>. Welp. You've reached the end of this page. Hope it was helpful (iykyk).</div><br>
       
 
