--- a/awards.html
+++ b/awards.html
@@ -129,7 +129,10 @@
       <div class="prompt">- Northeastern Undergradute Research and Fellowships PEAK Summit Award ($3k)</div>
       <div class="prompt">- Northeastern Undergradute Research and Fellowships PEAK Ascent Award ($1k)</div>
       <div class="prompt">- Northeastern College of Science Dean's Fellowship, x2 ($1k, $3k)</div>
-      <div class="prompt">- Various Travel Grants from department and NeurIPS ML4PS workshop</div>
+      <div class="prompt">- Various Travel Grants from department and NeurIPS ML4PS workshop</div><br>
+      <div class="prompt"> During K-12.</div><br>
+      <div class="prompt">- Tee-Ball participation trophy</div>
+      <div class="prompt">- Various hockey tournaments :^)</div>
       
 
       </div>
